kompose/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-moonlanding
  name: web-moonlanding
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    app: web-moonlanding
