kompose/ingress-web.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moonlanding-ingress
  annotations:
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: moonlanding-auth
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - moonlanding.tagsdev.xyz
    secretName: moonlanding-tls
  rules:
  - host: moonlanding.tagsdev.xyz
    http:
      paths:
      - path: /
        #pathType: ImplementationSpecific
        pathType: Prefix
        backend:
          service: 
            name: web-moonlanding
            port:
              number: 8000
